http_server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-server
  namespace: kafka
  labels:
    app: kafka-stat-server
spec:
  selector:
    matchLabels:
      app: kafka-server
  template:
    metadata:
      labels:
        app: kafka-server
    spec:
      containers:
      - name: producer
        image: ghcr.io/randsw/kafka-http-server
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
