http_server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-http-server
spec:
  selector:
    app: kafka-server
  ports:
  - name: http
    port: 80
    targetPort: 8080
