http_server/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  namespace: kafka
spec:
  ingressClassName: nginx
  rules:
  - host: "server.kind.cluster"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-http-server
            port:
              number: 80
